--- a/specs.html
+++ b/specs.html
@@ -56,7 +56,7 @@ Mic       : Shure mv7+</span>
 Amplifier : P-750u mk2
 Power     : FARAD Super 3
 HP        : ADX5000
-Source    : KKBOX > Roon</span>
+Source    : Tidal </span>
         </div>
     </div>
 </body>
